Hero section desktop complete ;) v0.5.0

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
     <!-- Header & Navigation Inspired by Hans :)-->
     <header aria-label="Navigation & Logo" class="header_wrapper">
-      <nav class="header">
+      <nav class="header" aria-label="Menu Navigation">
         <div class="header__logo">
           <img class="header__logo__img" src="./assets/images/svg/logo.svg" alt="Logo">
         </div>
@@ -70,8 +70,10 @@
               <span>Discover more</span></a>
           </div>
           <div class="hero-section__mobile-images">
-            Images 1
-            Images 2
+            <img class="hero-section__mobile-images__iphone-1" src="./assets/images/svg/iphone-1.svg"
+              alt="Iphone showing my cards section from Silicon AB app">
+            <img class="hero-section__mobile-images__iphone-2" src="./assets/images/svg/iphone-2.svg"
+              alt="Iphone showing budget section the app">
           </div>
       </section>
     </header>
