--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             hero-section__apps-links__link-item--desktop">
               <img src="./assets/images/svg/app-store-btn-group.svg" alt="Apple Store Image">
             </a>
-            <a href="#" title="Apple Store Link" class="
+            <a href="#" title="Android Store Link" class="
             hero-section__apps-links__link-item
             hero-section__apps-links__link-item--desktop">
               <img src="./assets/images/svg/app-android-store-btn-group.svg" alt="Android Store Image">
