Added tablet support hero section. first version out

--- a/src/index.html
+++ b/src/index.html
@@ -54,13 +54,11 @@
           <div class="hero-section__apps-links">
             <!-- Inspired by Hans for Dynamic Buttons ;)-->
             <a href="#" title="Apple Store Link" class="
-            hero-section__apps-links__link-item
-            hero-section__apps-links__link-item--desktop">
+            hero-section__apps-links__link-item">
               <img src="./assets/images/svg/app-store-btn-group.svg" alt="Apple Store Image">
             </a>
             <a href="#" title="Android Store Link" class="
-            hero-section__apps-links__link-item
-            hero-section__apps-links__link-item--desktop">
+            hero-section__apps-links__link-item">
               <img src="./assets/images/svg/app-android-store-btn-group.svg" alt="Android Store Image">
             </a>
           </div>
@@ -70,11 +68,14 @@
               <span>Discover more</span></a>
           </div>
           <div class="hero-section__mobile-images">
-            <img class="hero-section__mobile-images__iphone-1" src="./assets/images/svg/iphone-1.svg"
-              alt="Iphone showing my cards section from Silicon AB app">
-            <img class="hero-section__mobile-images__iphone-2" src="./assets/images/svg/iphone-2.svg"
-              alt="Iphone showing budget section the app">
+            <div class="hero-section__mobile-images__image-wrapper">
+              <img class="hero-section__mobile-images__image-wrapper__iphone-1" src="./assets/images/svg/iphone-1.svg"
+                alt="Iphone showing my cards section from Silicon AB app">
+              <img class="hero-section__mobile-images__image-wrapper__iphone-2" src="./assets/images/svg/iphone-2.svg"
+                alt="Iphone showing my budget section from Silicon AB app">
+            </div>
           </div>
+        </div>
       </section>
     </header>
     <!-- Header & Navigation End -->
