Company logo section added, responsive design also added

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,28 @@
       </section>
     </header>
     <!-- Header & Navigation End -->
-
+    <main class="main-wrapper" aria-label="Main Section of the page">
+      <section aria-label="Company Logos" class="main-wrapper__company-logos">
+        <div class="main-wrapper__company-logos__image-item" id="c-l-1">
+          <img src="./assets/images/svg/company-1.svg" alt="Company logo 1">
+        </div>
+        <div class="main-wrapper__company-logos__image-item" id="c-l-2">
+          <img src="./assets/images/svg/company-2.svg" alt="Company logo 2">
+        </div>
+        <div class="main-wrapper__company-logos__image-item" id="c-l-3">
+          <img src="./assets/images/svg/company-3.svg" alt="Company logo 3">
+        </div>
+        <div class="main-wrapper__company-logos__image-item" id="c-l-4">
+          <img src="./assets/images/svg/company-4.svg" alt="Company logo 4">
+        </div>
+        <div class="main-wrapper__company-logos__image-item" id="c-l-5">
+          <img src="./assets/images/svg/company-5.svg" alt="Company logo 5">
+        </div>
+        <div class="main-wrapper__company-logos__image-item" id="c-l-6">
+          <img src="./assets/images/svg/company-6.svg" alt="Company logo 6">
+        </div>
+      </section>
+    </main>
 
   </div>
 
