Added font awsome to npm and vite config, started working apps feature, updated readme abit

--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,23 @@
 <body>
   <!-- Container Queries & Skeleton Structure -->
   <div class="skeleton-wrapper">
-
     <!-- Header & Navigation Inspired by Hans :)-->
     <header aria-label="Navigation & Logo" class="header_wrapper">
       <nav class="header" aria-label="Menu Navigation">
         <div class="header__logo">
-          <img class="header__logo__img" src="./assets/images/svg/logo.svg" alt="Logo">
+          <img class="header__logo__img" src="./assets/images/svg/logo.svg" alt="Logo" />
         </div>
         <div class="header__menu">
           <ul class="header__menu__navigation">
-            <li class="header__menu__navigation__li-items" tabindex="0">Features</li>
+            <li class="header__menu__navigation__li-items" tabindex="0">
+              Features
+            </li>
           </ul>
         </div>
         <div class="header__theme-btn-access">
           <span class="header__theme-btn-access__text-span"> Dark Mode </span>
           <label class="header__theme-btn-access__toggle">
-            <input class="header__theme-btn-access__toggle__check-box" type="checkbox">
+            <input class="header__theme-btn-access__toggle__check-box" type="checkbox" />
             <span class="header__theme-btn-access__toggle__slider" aria-label="Slider for Theme" aria-valuenow="0"
               tabindex="0" role="slider" title="Slider for Theme" aria-valuemin="0" aria-valuemax="1">
             </span>
@@ -41,25 +42,24 @@
           <a class="header__theme-btn-access__bars">
             <i class="fa-solid fa-bars header__theme-btn-access__bars__icon"></i>
           </a>
-
         </div>
       </nav>
       <section aria-label="Hero & Promotion Section">
         <div class="hero-section">
-          <h1 class="hero-section__heading">Manage All Your Money in One App</h1>
+          <p class="hero-section__heading">
+            Manage All Your Money in One App
+          </p>
           <p class="hero-section__text-description">
-            We offer you a new generation of the mobile banking.
-            Save, spend & manage money in your pocket.
+            We offer you a new generation of the mobile banking. Save, spend &
+            manage money in your pocket.
           </p>
           <div class="hero-section__apps-links">
             <!-- Inspired by Hans for Dynamic Buttons ;)-->
-            <a href="#" title="Apple Store Link" class="
-            hero-section__apps-links__link-item">
-              <img src="./assets/images/svg/app-store-btn-group.svg" alt="Apple Store Image">
+            <a href="#" title="Apple Store Link" class="hero-section__apps-links__link-item">
+              <img src="./assets/images/svg/app-store-btn-group.svg" alt="Apple Store Image" />
             </a>
-            <a href="#" title="Android Store Link" class="
-            hero-section__apps-links__link-item">
-              <img src="./assets/images/svg/app-android-store-btn-group.svg" alt="Android Store Image">
+            <a href="#" title="Android Store Link" class="hero-section__apps-links__link-item">
+              <img src="./assets/images/svg/app-android-store-btn-group.svg" alt="Android Store Image" />
             </a>
           </div>
           <div class="hero-section__discover-more">
@@ -70,38 +70,96 @@
           <div class="hero-section__mobile-images">
             <div class="hero-section__mobile-images__image-wrapper">
               <img class="hero-section__mobile-images__image-wrapper__iphone-1" src="./assets/images/svg/iphone-1.svg"
-                alt="Iphone showing my cards section from Silicon AB app">
+                alt="Iphone showing my cards section from Silicon AB app" />
               <img class="hero-section__mobile-images__image-wrapper__iphone-2" src="./assets/images/svg/iphone-2.svg"
-                alt="Iphone showing my budget section from Silicon AB app">
+                alt="Iphone showing my budget section from Silicon AB app" />
             </div>
           </div>
         </div>
       </section>
     </header>
     <!-- Header & Navigation End -->
+    <!-- Main Content -->
     <main class="main-wrapper" aria-label="Main Section of the page">
       <section aria-label="Company Logos" class="main-wrapper__company-logos">
         <div class="main-wrapper__company-logos__image-item" id="c-l-1">
-          <img src="./assets/images/svg/company-1.svg" alt="Company logo 1">
+          <img src="./assets/images/svg/company-1.svg" alt="Company logo 1" />
         </div>
         <div class="main-wrapper__company-logos__image-item" id="c-l-2">
-          <img src="./assets/images/svg/company-2.svg" alt="Company logo 2">
+          <img src="./assets/images/svg/company-2.svg" alt="Company logo 2" />
         </div>
         <div class="main-wrapper__company-logos__image-item" id="c-l-3">
-          <img src="./assets/images/svg/company-3.svg" alt="Company logo 3">
+          <img src="./assets/images/svg/company-3.svg" alt="Company logo 3" />
         </div>
         <div class="main-wrapper__company-logos__image-item" id="c-l-4">
-          <img src="./assets/images/svg/company-4.svg" alt="Company logo 4">
+          <img src="./assets/images/svg/company-4.svg" alt="Company logo 4" />
         </div>
         <div class="main-wrapper__company-logos__image-item" id="c-l-5">
-          <img src="./assets/images/svg/company-5.svg" alt="Company logo 5">
+          <img src="./assets/images/svg/company-5.svg" alt="Company logo 5" />
         </div>
         <div class="main-wrapper__company-logos__image-item" id="c-l-6">
-          <img src="./assets/images/svg/company-6.svg" alt="Company logo 6">
+          <img src="./assets/images/svg/company-6.svg" alt="Company logo 6" />
+        </div>
+      </section>
+      <section aria-label="App Features" class="main-wrapper__app-features">
+        <img src="./assets/images/svg/phone-app-features.svg" alt="Iphone showing App features" />
+        <div>
+          <h1>App Features</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+            volutpat mollis egestas. Nam luctus facilisis ultrices.
+            Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.
+          </p>
+          <div class="main-wrapper__app-features__app-features-cards">
+            <div class="main-wrapper__app-features__app-features-cards__card-container">
+              <i class="fa-solid fa-credit-card hero-section__discover-more__link-item__discover-more__icon"
+                aria-hidden="true"></i>
+              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
+                <h5>Easy Payments</h5>
+                <p>
+                  Id mollis consectetur congue egestas egestas suspendisse
+                  blandit justo.
+                </p>
+              </div>
+            </div>
+            <div class="main-wrapper__app-features__app-features-cards__card-container">
+              <i class="fa-solid fa-chevron-down hero-section__discover-more__link-item__discover-more__icon"
+                aria-hidden="true"></i>
+              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
+                <h5>Easy Payments</h5>
+                <p>
+                  Id mollis consectetur congue egestas egestas suspendisse
+                  blandit justo.
+                </p>
+              </div>
+            </div>
+            <div class="main-wrapper__app-features__app-features-cards__card-container">
+              <i class="fa-solid fa-chevron-down hero-section__discover-more__link-item__discover-more__icon"
+                aria-hidden="true"></i>
+              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
+                <h5>Easy Payments</h5>
+                <p>
+                  Id mollis consectetur congue egestas egestas suspendisse
+                  blandit justo.
+                </p>
+              </div>
+            </div>
+            <div class="main-wrapper__app-features__app-features-cards__card-container">
+              <i class="fa-solid fa-chevron-down hero-section__discover-more__link-item__discover-more__icon"
+                aria-hidden="true"></i>
+              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
+                <h5>Easy Payments</h5>
+                <p>
+                  Id mollis consectetur congue egestas egestas suspendisse
+                  blandit justo.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
-
+    <!-- Main Content End -->
   </div>
 
   <script type="module" src="./js/main.js"></script>
