Added support for Font-awesome :)

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
           </label>
           <button type="submit"
             class="header__theme-btn-access__btn-sign-in-up header__theme-btn-access__btn-sign-in-up--primary">
-            <i class="fa-regular fa-user header__theme-btn-access__btn-sign-in-up__user-icon"></i>
+            <i class="header__theme-btn-access__btn-sign-in-up__user-icon"></i>
             Sign in / up
           </button>
           <a class="header__theme-btn-access__bars">
