App Features desktop done, Added font settings to base, more to be added.

--- a/src/index.html
+++ b/src/index.html
@@ -112,46 +112,56 @@
           </p>
           <div class="main-wrapper__app-features__app-features-cards">
             <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <i class="fa-solid fa-credit-card hero-section__discover-more__link-item__discover-more__icon"
-                aria-hidden="true"></i>
+              <img src="./assets/images/svg/credit-card.svg" alt="Easy Payment">
               <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
                 <h5>Easy Payments</h5>
                 <p>
-                  Id mollis consectetur congue egestas egestas suspendisse
-                  blandit justo.
+                  Id mollis consectetur congue egestas egestas suspendisse blandit justo.
                 </p>
               </div>
             </div>
             <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <i class="fa-solid fa-chevron-down hero-section__discover-more__link-item__discover-more__icon"
-                aria-hidden="true"></i>
+              <img src="./assets/images/svg/shield.svg" alt="Security">
               <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
-                <h5>Easy Payments</h5>
+                <h5>Data Security</h5>
                 <p>
-                  Id mollis consectetur congue egestas egestas suspendisse
-                  blandit justo.
+                  Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.
                 </p>
               </div>
             </div>
             <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <i class="fa-solid fa-chevron-down hero-section__discover-more__link-item__discover-more__icon"
-                aria-hidden="true"></i>
+              <img src="./assets/images/svg/bars-graphic.svg" alt="Cost Statistics">
               <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
-                <h5>Easy Payments</h5>
+                <h5>Cost Statistics</h5>
                 <p>
-                  Id mollis consectetur congue egestas egestas suspendisse
-                  blandit justo.
+                  Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.
                 </p>
               </div>
             </div>
             <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <i class="fa-solid fa-chevron-down hero-section__discover-more__link-item__discover-more__icon"
-                aria-hidden="true"></i>
+              <img src="./assets/images/svg/communication.svg" alt="Support 24/7">
               <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
-                <h5>Easy Payments</h5>
+                <h5>Support 24/7</h5>
                 <p>
-                  Id mollis consectetur congue egestas egestas suspendisse
-                  blandit justo.
+                  A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.
+                </p>
+              </div>
+            </div>
+            <div class="main-wrapper__app-features__app-features-cards__card-container">
+              <img src="./assets/images/svg/wallet.svg" alt="Regular Cashback">
+              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
+                <h5>Regular Cashback</h5>
+                <p>
+                  Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.
+                </p>
+              </div>
+            </div>
+            <div class="main-wrapper__app-features__app-features-cards__card-container">
+              <img src="./assets/images/svg/happy.svg" alt="Regular Cashback">
+              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
+                <h5>Top Standards</h5>
+                <p>
+                  Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor arcu.
                 </p>
               </div>
             </div>
