Features app responsive added Tablets, Mobile :)

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Manage All Your Money in One App" />
   <title>Silicon</title>
-
-
 </head>
 
 <body>
@@ -102,66 +100,73 @@
         </div>
       </section>
       <section aria-label="App Features" class="main-wrapper__app-features">
-        <img src="./assets/images/svg/phone-app-features.svg" alt="Iphone showing App features" />
+        <img class="main-wrapper__app-features__phone-image" src="./assets/images/svg/phone-app-features.svg"
+          alt="Iphone showing App features" />
         <div>
-          <h1>App Features</h1>
-          <p>
+          <h1 class="main-wrapper__app-features__heading">App Features</h1>
+          <p class="main-wrapper__app-features__p-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
             volutpat mollis egestas. Nam luctus facilisis ultrices.
             Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.
           </p>
           <div class="main-wrapper__app-features__app-features-cards">
             <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/credit-card.svg" alt="Easy Payment">
+              <img src="./assets/images/svg/credit-card.svg" alt="Easy Payment" />
               <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
                 <h5>Easy Payments</h5>
                 <p>
-                  Id mollis consectetur congue egestas egestas suspendisse blandit justo.
+                  Id mollis consectetur congue egestas egestas suspendisse
+                  blandit justo.
                 </p>
               </div>
             </div>
             <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/shield.svg" alt="Security">
+              <img src="./assets/images/svg/shield.svg" alt="Security" />
               <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
                 <h5>Data Security</h5>
                 <p>
-                  Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.
+                  Augue pulvinar justo, fermentum fames aliquam accumsan
+                  vestibulum non.
                 </p>
               </div>
             </div>
             <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/bars-graphic.svg" alt="Cost Statistics">
+              <img src="./assets/images/svg/bars-graphic.svg" alt="Cost Statistics" />
               <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
                 <h5>Cost Statistics</h5>
                 <p>
-                  Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.
+                  Mattis urna ultricies non amet, purus in auctor non. Odio
+                  vulputate ac nibh.
                 </p>
               </div>
             </div>
             <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/communication.svg" alt="Support 24/7">
+              <img src="./assets/images/svg/communication.svg" alt="Support 24/7" />
               <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
                 <h5>Support 24/7</h5>
                 <p>
-                  A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.
+                  A elementum, imperdiet enim, pretium etiam facilisi in
+                  aenean quam mauris.
                 </p>
               </div>
             </div>
             <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/wallet.svg" alt="Regular Cashback">
+              <img src="./assets/images/svg/wallet.svg" alt="Regular Cashback" />
               <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
                 <h5>Regular Cashback</h5>
                 <p>
-                  Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.
+                  Sit facilisis dolor arcu, fermentum vestibulum arcu
+                  elementum imperdiet eleifend.
                 </p>
               </div>
             </div>
             <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/happy.svg" alt="Regular Cashback">
+              <img src="./assets/images/svg/happy.svg" alt="Regular Cashback" />
               <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
                 <h5>Top Standards</h5>
                 <p>
-                  Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor arcu.
+                  Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus
+                  id. Sit facilisis dolor arcu.
                 </p>
               </div>
             </div>
