Mobile first, Mobile How does it work implemented

--- a/src/index.html
+++ b/src/index.html
@@ -173,6 +173,17 @@
           </div>
         </div>
       </section>
+      <section aria-label="How Does it Work?" class="main-wrapper__app-how-diw">
+        <h1>How Does It Work?</h1>
+        <img src="./assets/images/svg/how-phone-1.svg" alt="How does it work Phone 1">
+        <h4>Transfers to people from
+          your contact list</h4>
+        <p>
+          Proin volutpat mollis egestas. Nam luctus facilisis
+          ultrices. Pellentesque volutpat ligula est. Mattis
+          fermentum, at nec lacus.
+        </p>
+      </section>
     </main>
     <!-- Main Content End -->
   </div>
