Fixed some small bugs, how it works mobile, tablet responsive added

--- a/src/index.html
+++ b/src/index.html
@@ -80,109 +80,120 @@
     <!-- Main Content -->
     <main class="main-wrapper" aria-label="Main Section of the page">
       <section aria-label="Company Logos" class="main-wrapper__company-logos">
-        <div class="main-wrapper__company-logos__image-item" id="c-l-1">
-          <img src="./assets/images/svg/company-1.svg" alt="Company logo 1" />
-        </div>
-        <div class="main-wrapper__company-logos__image-item" id="c-l-2">
-          <img src="./assets/images/svg/company-2.svg" alt="Company logo 2" />
-        </div>
-        <div class="main-wrapper__company-logos__image-item" id="c-l-3">
-          <img src="./assets/images/svg/company-3.svg" alt="Company logo 3" />
-        </div>
-        <div class="main-wrapper__company-logos__image-item" id="c-l-4">
-          <img src="./assets/images/svg/company-4.svg" alt="Company logo 4" />
-        </div>
-        <div class="main-wrapper__company-logos__image-item" id="c-l-5">
-          <img src="./assets/images/svg/company-5.svg" alt="Company logo 5" />
-        </div>
-        <div class="main-wrapper__company-logos__image-item" id="c-l-6">
-          <img src="./assets/images/svg/company-6.svg" alt="Company logo 6" />
+        <div class="main-wrapper__company-logos__container">
+          <div class="main-wrapper__company-logos__container__image-item" id="c-l-1">
+            <img src="./assets/images/svg/company-1.svg" alt="Company logo 1" />
+          </div>
+          <div class="main-wrapper__company-logos__container__image-item" id="c-l-2">
+            <img src="./assets/images/svg/company-2.svg" alt="Company logo 2" />
+          </div>
+          <div class="main-wrapper__company-logos__container__image-item" id="c-l-3">
+            <img src="./assets/images/svg/company-3.svg" alt="Company logo 3" />
+          </div>
+          <div class="main-wrapper__company-logos__container__image-item" id="c-l-4">
+            <img src="./assets/images/svg/company-4.svg" alt="Company logo 4" />
+          </div>
+          <div class="main-wrapper__company-logos__container__image-item" id="c-l-5">
+            <img src="./assets/images/svg/company-5.svg" alt="Company logo 5" />
+          </div>
+          <div class="main-wrapper__company-logos__container__image-item" id="c-l-6">
+            <img src="./assets/images/svg/company-6.svg" alt="Company logo 6" />
+          </div>
         </div>
       </section>
       <section aria-label="App Features" class="main-wrapper__app-features">
-        <img class="main-wrapper__app-features__phone-image" src="./assets/images/svg/phone-app-features.svg"
-          alt="Iphone showing App features" />
-        <div>
-          <h1 class="main-wrapper__app-features__heading">App Features</h1>
-          <p class="main-wrapper__app-features__p-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-            volutpat mollis egestas. Nam luctus facilisis ultrices.
-            Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.
-          </p>
-          <div class="main-wrapper__app-features__app-features-cards">
-            <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/credit-card.svg" alt="Easy Payment" />
-              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
-                <h5>Easy Payments</h5>
-                <p>
-                  Id mollis consectetur congue egestas egestas suspendisse
-                  blandit justo.
-                </p>
+        <div class="main-wrapper__app-features__container">
+          <img class="main-wrapper__app-features__container__phone-image"
+            src="./assets/images/svg/phone-app-features.svg" alt="Iphone showing App features" />
+          <div>
+            <h1 class="main-wrapper__app-features__container__heading">
+              App Features
+            </h1>
+            <p class="main-wrapper__app-features__container__p-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+              volutpat mollis egestas. Nam luctus facilisis ultrices.
+              Pellentesque volutpat ligula est. Mattis fermentum, at nec
+              lacus.
+            </p>
+            <div class="main-wrapper__app-features__container__app-features-cards">
+              <div class="main-wrapper__app-features__container__app-features-cards__card-container">
+                <img src="./assets/images/svg/credit-card.svg" alt="Easy Payment" />
+                <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
+                  <h5>Easy Payments</h5>
+                  <p>
+                    Id mollis consectetur congue egestas egestas suspendisse
+                    blandit justo.
+                  </p>
+                </div>
               </div>
-            </div>
-            <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/shield.svg" alt="Security" />
-              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
-                <h5>Data Security</h5>
-                <p>
-                  Augue pulvinar justo, fermentum fames aliquam accumsan
-                  vestibulum non.
-                </p>
+              <div class="main-wrapper__app-features__container__app-features-cards__card-container">
+                <img src="./assets/images/svg/shield.svg" alt="Security" />
+                <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
+                  <h5>Data Security</h5>
+                  <p>
+                    Augue pulvinar justo, fermentum fames aliquam accumsan
+                    vestibulum non.
+                  </p>
+                </div>
               </div>
-            </div>
-            <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/bars-graphic.svg" alt="Cost Statistics" />
-              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
-                <h5>Cost Statistics</h5>
-                <p>
-                  Mattis urna ultricies non amet, purus in auctor non. Odio
-                  vulputate ac nibh.
-                </p>
+              <div class="main-wrapper__app-features__container__app-features-cards__card-container">
+                <img src="./assets/images/svg/bars-graphic.svg" alt="Cost Statistics" />
+                <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
+                  <h5>Cost Statistics</h5>
+                  <p>
+                    Mattis urna ultricies non amet, purus in auctor non. Odio
+                    vulputate ac nibh.
+                  </p>
+                </div>
               </div>
-            </div>
-            <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/communication.svg" alt="Support 24/7" />
-              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
-                <h5>Support 24/7</h5>
-                <p>
-                  A elementum, imperdiet enim, pretium etiam facilisi in
-                  aenean quam mauris.
-                </p>
+              <div class="main-wrapper__app-features__container__app-features-cards__card-container">
+                <img src="./assets/images/svg/communication.svg" alt="Support 24/7" />
+                <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
+                  <h5>Support 24/7</h5>
+                  <p>
+                    A elementum, imperdiet enim, pretium etiam facilisi in
+                    aenean quam mauris.
+                  </p>
+                </div>
               </div>
-            </div>
-            <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/wallet.svg" alt="Regular Cashback" />
-              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
-                <h5>Regular Cashback</h5>
-                <p>
-                  Sit facilisis dolor arcu, fermentum vestibulum arcu
-                  elementum imperdiet eleifend.
-                </p>
+              <div class="main-wrapper__app-features__container__app-features-cards__card-container">
+                <img src="./assets/images/svg/wallet.svg" alt="Regular Cashback" />
+                <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
+                  <h5>Regular Cashback</h5>
+                  <p>
+                    Sit facilisis dolor arcu, fermentum vestibulum arcu
+                    elementum imperdiet eleifend.
+                  </p>
+                </div>
               </div>
-            </div>
-            <div class="main-wrapper__app-features__app-features-cards__card-container">
-              <img src="./assets/images/svg/happy.svg" alt="Regular Cashback" />
-              <div class="main-wrapper__app-features__app-features-cards__card-container__card-item">
-                <h5>Top Standards</h5>
-                <p>
-                  Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus
-                  id. Sit facilisis dolor arcu.
-                </p>
+              <div class="main-wrapper__app-features__container__app-features-cards__card-container">
+                <img src="./assets/images/svg/happy.svg" alt="Regular Cashback" />
+                <div class="main-wrapper__app-features__container__app-features-cards__card-container__card-item">
+                  <h5>Top Standards</h5>
+                  <p>
+                    Faucibus cursus maecenas lorem cursus nibh. Sociis sit
+                    risus id. Sit facilisis dolor arcu.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
       <section aria-label="How Does it Work?" class="main-wrapper__app-how-diw">
-        <h1>How Does It Work?</h1>
-        <img src="./assets/images/svg/how-phone-1.svg" alt="How does it work Phone 1">
-        <h4>Transfers to people from
-          your contact list</h4>
-        <p>
-          Proin volutpat mollis egestas. Nam luctus facilisis
-          ultrices. Pellentesque volutpat ligula est. Mattis
-          fermentum, at nec lacus.
-        </p>
+        <div class="main-wrapper__app-how-diw__container">
+          <h1>How Does It Work?</h1>
+          <div class="main-wrapper__app-how-diw__container__image-items">
+            <img id="how-phone-2" src="./assets/images/svg/how-phone-2.svg" alt="How does it work Phone 2" />
+            <img src="./assets/images/svg/how-phone-1.svg" alt="How does it work Phone 1" />
+            <img id="how-phone-3" src=" ./assets/images/svg/how-phone-3.svg" alt="How does it work Phone 3" />
+          </div>
+          <h4>Transfers to people from your contact list</h4>
+          <p>
+            Proin volutpat mollis egestas. Nam luctus facilisis ultrices.
+            Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.
+          </p>
+        </div>
       </section>
     </main>
     <!-- Main Content End -->
