--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,7 @@
     <!-- Header & Navigation End -->
     <!-- Main Content -->
     <main class="main-wrapper" aria-label="Main Section of the page">
+      <!-- Company Logos -->
       <section aria-label="Company Logos" class="main-wrapper__company-logos">
         <div class="main-wrapper__company-logos__container">
           <div class="main-wrapper__company-logos__container__image-item" id="c-l-1">
@@ -101,6 +102,7 @@
           </div>
         </div>
       </section>
+      <!-- App Features -->
       <section aria-label="App Features" class="main-wrapper__app-features">
         <div class="main-wrapper__app-features__container">
           <img class="main-wrapper__app-features__container__phone-image"
@@ -180,6 +182,7 @@
           </div>
         </div>
       </section>
+      <!-- How it Works -->
       <section aria-label="How Does it Work?" class="main-wrapper__app-how-diw">
         <div class="main-wrapper__app-how-diw__container">
           <h1>How Does It Work?</h1>
@@ -193,6 +196,74 @@
             Proin volutpat mollis egestas. Nam luctus facilisis ultrices.
             Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.
           </p>
+        </div>
+      </section>
+      <!-- App Description -->
+      <section aria-label="App Description" class="main-wrapper__app-description">
+        <div class="main-wrapper__app-description__container">
+          <div class="main-wrapper__app-description__container__section">
+            <div class="main-wrapper__app-description__container__section__text-wrapper">
+              <h2>Make your money transfer simple and clear</h2>
+              <div>
+                <p>
+                  <i class="fa-regular fa-brand-base fa-circle-check"></i>
+                  Banking transactions are free for you
+                </p>
+                <p>
+                  <i class="fa-regular fa-brand-base fa-circle-check"></i> No
+                  monthly cash commission
+                </p>
+                <p class="main-wrapper__app-description__container__section__lastp-p-element">
+                  <i class="fa-regular fa-brand-base fa-circle-check"></i>
+                  Manage payments and transactions online
+                </p>
+              </div>
+              <button data-btn="howdy" type="submit" class="main-wrapper__app-description__container__section__learn-more-btn 
+              main-wrapper__app-description__container__section__learn-more-btn--primary">
+                Learn more
+                <i class="main-wrapper__app-description__container__section__learn-more-btn__arrow-icon"></i>
+              </button>
+            </div>
+          </div>
+          <div class="main-wrapper__app-description__container__section">
+            <img class="main-wrapper__app-description__container__section__balance-image"
+              src="./assets/images/svg/app-description-balance.svg" alt="App Balance Image">
+            <img class="main-wrapper__app-description__container__section__user-image"
+              src="./assets/images/svg/app-description-balance-user.svg" alt="App User Image">
+          </div>
+        </div>
+        <div class="main-wrapper__app-description__container">
+          <div class="main-wrapper__app-description__container__section">
+            <img class="main-wrapper__app-description__container__section__full-users-image"
+              src="./assets/images/svg/app-description-users.svg" alt="App Balance Image">
+            <img class="main-wrapper__app-description__container__section__credit-card-image"
+              src="./assets/images/svg/app-description-credit-card.svg" alt="App User Image">
+          </div>
+          <div class="main-wrapper__app-description__container__section">
+            <div class="main-wrapper__app-description__container__section__text-wrapper
+            main-wrapper__app-description__container__section__text-wrapper--longer">
+              <h2>Receive payment from international bank details</h2>
+              <div class="main-wrapper__app-description__container__section__text-wrapper--flex">
+                <div class="main-wrapper__app-description__container__section__text-wrapper__flex-box">
+                  <img src="./assets/images/svg/credit-card.svg" alt="Easy Payment">
+                  <p>
+                    Manage your payments online. Mollis congue egestas egestas fermentum fames.
+                  </p>
+                </div>
+                <div class="main-wrapper__app-description__container__section__text-wrapper__flex-box">
+                  <img src="./assets/images/svg/credit-card.svg" alt="Easy Payment">
+                  <p>
+                    A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.
+                  </p>
+                </div>
+              </div>
+              <button data-btn="howdy" type="submit" class="main-wrapper__app-description__container__section__learn-more-btn 
+              main-wrapper__app-description__container__section__learn-more-btn--primary">
+                Learn more
+                <i class="main-wrapper__app-description__container__section__learn-more-btn__arrow-icon"></i>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
