--- a/src/index.html
+++ b/src/index.html
@@ -218,8 +218,8 @@
                   Manage payments and transactions online
                 </p>
               </div>
-              <button data-btn="howdy" type="submit" class="main-wrapper__app-description__container__section__learn-more-btn 
-              main-wrapper__app-description__container__section__learn-more-btn--primary">
+              <button data-btn="howdy" type="submit"
+                class="main-wrapper__app-description__container__section__learn-more-btn main-wrapper__app-description__container__section__learn-more-btn--primary">
                 Learn more
                 <i class="main-wrapper__app-description__container__section__learn-more-btn__arrow-icon"></i>
               </button>
@@ -227,41 +227,89 @@
           </div>
           <div class="main-wrapper__app-description__container__section">
             <img class="main-wrapper__app-description__container__section__balance-image"
-              src="./assets/images/svg/app-description-balance.svg" alt="App Balance Image">
+              src="./assets/images/svg/app-description-balance.svg" alt="App Balance Image" />
             <img class="main-wrapper__app-description__container__section__user-image"
-              src="./assets/images/svg/app-description-balance-user.svg" alt="App User Image">
+              src="./assets/images/svg/app-description-balance-user.svg" alt="App User Image" />
           </div>
         </div>
         <div class="main-wrapper__app-description__container">
           <div class="main-wrapper__app-description__container__section">
             <img class="main-wrapper__app-description__container__section__full-users-image"
-              src="./assets/images/svg/app-description-users.svg" alt="App Balance Image">
+              src="./assets/images/svg/app-description-users.svg" alt="App Balance Image" />
             <img class="main-wrapper__app-description__container__section__credit-card-image"
-              src="./assets/images/svg/app-description-credit-card.svg" alt="App User Image">
+              src="./assets/images/svg/app-description-credit-card.svg" alt="App User Image" />
           </div>
           <div class="main-wrapper__app-description__container__section">
-            <div class="main-wrapper__app-description__container__section__text-wrapper
-            main-wrapper__app-description__container__section__text-wrapper--longer">
+            <div
+              class="main-wrapper__app-description__container__section__text-wrapper main-wrapper__app-description__container__section__text-wrapper--longer">
               <h2>Receive payment from international bank details</h2>
               <div class="main-wrapper__app-description__container__section__text-wrapper--flex">
                 <div class="main-wrapper__app-description__container__section__text-wrapper__flex-box">
-                  <img src="./assets/images/svg/credit-card.svg" alt="Easy Payment">
+                  <img src="./assets/images/svg/credit-card.svg" alt="Easy Payment" />
                   <p>
-                    Manage your payments online. Mollis congue egestas egestas fermentum fames.
+                    Manage your payments online. Mollis congue egestas egestas
+                    fermentum fames.
                   </p>
                 </div>
                 <div class="main-wrapper__app-description__container__section__text-wrapper__flex-box">
-                  <img src="./assets/images/svg/credit-card.svg" alt="Easy Payment">
+                  <img src="./assets/images/svg/wallet.svg" alt="Easy Payment" />
                   <p>
-                    A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.
+                    A elementur and imperdiet enim, pretium etiam facilisi
+                    aenean quam mauris.
                   </p>
                 </div>
               </div>
-              <button data-btn="howdy" type="submit" class="main-wrapper__app-description__container__section__learn-more-btn 
-              main-wrapper__app-description__container__section__learn-more-btn--primary">
+              <button data-btn="howdy" type="submit"
+                class="main-wrapper__app-description__container__section__learn-more-btn main-wrapper__app-description__container__section__learn-more-btn--primary">
                 Learn more
                 <i class="main-wrapper__app-description__container__section__learn-more-btn__arrow-icon"></i>
               </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Clients are Loving Our APp -->
+      <section aria-label="Clients Are Loving Our App" class="main-wrapper__clients-app">
+        <div class="main-wrapper__clients-app__container">
+          <div class="main-wrapper__clients-app__container__client-intro">
+            <p>Clients Are Loving Our App</p>
+          </div>
+          <div class="main-wrapper__clients-app__container__client-test-card">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-regular fa-star fa-brand-base"></i>
+            <p>
+              Sit pretium aliquam tempor, orci dolor sed maecenas rutrum
+              sagittis. Laoreet posuere rhoncus, egestas lacus, egestas justo
+              aliquam vel. Nisi vitae lectus hac hendrerit. Montes justo
+              turpis sit amet.
+            </p>
+            <div class="main-wrapper__clients-app__container__client-test-card__user-avatar">
+              <img src="./assets/images/svg/avatar-female.svg" alt="Female Avatar" />
+              <div>
+                <p>Fannie Summers</p>
+                <p>Designer</p>
+              </div>
+            </div>
+          </div>
+          <div class="main-wrapper__clients-app__container__client-test-card">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <p>
+              Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl bibendum nulla
+              tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt egestas eget nunc.
+            </p>
+            <div class="main-wrapper__clients-app__container__client-test-card__user-avatar">
+              <img src="./assets/images/svg/avatar-male.svg" alt="Female Avatar" />
+              <div>
+                <p>Albert Flores</p>
+                <p>Developer</p>
+              </div>
             </div>
           </div>
         </div>
