Fixed padding, and missing elements in Clients are loving our app section

--- a/src/index.html
+++ b/src/index.html
@@ -275,6 +275,8 @@
             <p>Clients Are Loving Our App</p>
           </div>
           <div class="main-wrapper__clients-app__container__client-test-card">
+            <img class="main-wrapper__clients-app__container__client-test-card__icon"
+              src="./assets/images/svg/quoto-icon.svg" alt="Quote Icon">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -295,6 +297,8 @@
             </div>
           </div>
           <div class="main-wrapper__clients-app__container__client-test-card">
+            <img class="main-wrapper__clients-app__container__client-test-card__icon"
+              src="./assets/images/svg/quoto-icon.svg" alt="Quote Icon">
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -312,6 +316,12 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <!-- Any Questions Check out the FAQs-->
+      <section aria-label="Any questions? Check out the FAQs" class="main-wrapper__faq">
+        <div class="main-wrapper__faq__container">
+          asds
         </div>
       </section>
     </main>
