Started working on FAQ

--- a/src/index.html
+++ b/src/index.html
@@ -321,7 +321,16 @@
       <!-- Any Questions Check out the FAQs-->
       <section aria-label="Any questions? Check out the FAQs" class="main-wrapper__faq">
         <div class="main-wrapper__faq__container">
-          asds
+          <div class="main-wrapper__faq__container__faq-header">
+            <h2>Any questions? Check out  the FAQs</h2>
+            <p>Still have unanswered questions and need
+              to get in touch?</p>
+          </div>
+          <div class="main-wrapper__faq__container__faq-accordion">
+            <p class="main-wrapper__faq__container__faq-accordion__title">Is any of my personal information
+              stored in the App?</p>
+            <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+          </div>
         </div>
       </section>
     </main>
