--- a/src/index.html
+++ b/src/index.html
@@ -276,7 +276,7 @@
           </div>
           <div class="main-wrapper__clients-app__container__client-test-card">
             <img class="main-wrapper__clients-app__container__client-test-card__icon"
-              src="./assets/images/svg/quoto-icon.svg" alt="Quote Icon">
+              src="./assets/images/svg/quoto-icon.svg" alt="Quote Icon" />
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
@@ -298,15 +298,17 @@
           </div>
           <div class="main-wrapper__clients-app__container__client-test-card">
             <img class="main-wrapper__clients-app__container__client-test-card__icon"
-              src="./assets/images/svg/quoto-icon.svg" alt="Quote Icon">
+              src="./assets/images/svg/quoto-icon.svg" alt="Quote Icon" />
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <i class="fa-solid fa-star"></i>
             <p>
-              Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl bibendum nulla
-              tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt egestas eget nunc.
+              Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin
+              amet porttitor. Nisl bibendum nulla tincidunt eu enim ornare
+              dictumst sit amet. Dictum pretium dolor tincidunt egestas eget
+              nunc.
             </p>
             <div class="main-wrapper__clients-app__container__client-test-card__user-avatar">
               <img src="./assets/images/svg/avatar-male.svg" alt="Female Avatar" />
@@ -322,16 +324,66 @@
       <section aria-label="Any questions? Check out the FAQs" class="main-wrapper__faq">
         <div class="main-wrapper__faq__container">
           <div class="main-wrapper__faq__container__faq-header">
-            <h2>Any questions? Check out  the FAQs</h2>
-            <p>Still have unanswered questions and need
-              to get in touch?</p>
+            <h2>Any questions? Check out the FAQs</h2>
+            <p>Still have unanswered questions and need to get in touch?</p>
           </div>
           <div class="main-wrapper__faq__container__faq-accordion">
-            <p class="main-wrapper__faq__container__faq-accordion__title">Is any of my personal information
-              stored in the App?</p>
-            <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+            <div class="main-wrapper__faq__container__faq-accordion__title
+            main-wrapper__faq__container__faq-accordion__title--border-radius">
+              <p>Is any of my personal information stored in the App?</p>
+              <i
+                class="main-wrapper__faq__container__faq-accordion__icon main-wrapper__faq__container__faq-accordion__icon--active fa-2xs"></i>
+            </div>
+            <div class="main-wrapper__faq__container__faq-accordion__content">
+              <p>
+                Nunc duis id aenean gravida tincidunt eu, tempor ullamcorper.
+                Viverra aliquam arcu, viverra et, cursus. Aliquet pretium
+                cursus adipiscing gravida et consequat lobortis arcu velit.
+                Nibh pharetra fermentum duis accumsan lectus non. Massa cursus
+                molestie lorem scelerisque pellentesque. Nisi, enim, arcu
+                purus gravida adipiscing euismod montes, duis egestas.
+                Vehicula eu etiam quam tristique tincidunt suspendisse ut
+                consequat.
+              </p>
+              <p>
+                Ornare senectus fusce dignissim ut. Integer consequat in eu
+                tortor, faucibus et lacinia posuere. Turpis sit viverra lorem
+                suspendisse lacus aliquam auctor vulputate. Quis egestas
+                aliquam nunc purus lacus, elit leo elit facilisi. Dignissim
+                amet adipiscing massa integer.
+              </p>
+            </div>
+            <div class="main-wrapper__faq__container__faq-accordion__title">
+              <p>What formats can I download my
+                transaction history in?</p>
+              <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+            </div>
+            <div class="main-wrapper__faq__container__faq-accordion__title">
+              <p>Can I schedule future transfers?</p>
+              <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+            </div>
+            <div class="main-wrapper__faq__container__faq-accordion__title">
+              <p>When can I use Banking App
+                services?</p>
+              <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+            </div>
+            <div class="main-wrapper__faq__container__faq-accordion__title">
+              <p>Can I create my own password that is
+                easy for me to remember?</p>
+              <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+            </div>
+            <div class="main-wrapper__faq__container__faq-accordion__title">
+              <p>What happens if I forget or lose my
+                password?</p>
+              <i class="main-wrapper__faq__container__faq-accordion__icon fa-2xs"></i>
+            </div>
           </div>
-        </div>
+          <div class="main-wrapper__faq__container__faq-contact">
+            <button data-btn="howdy" type="submit" class="main-wrapper__faq__container__faq-contact__contact-us-now-btn
+            main-wrapper__faq__container__faq-contact__contact-us-now-btn--primary">
+              Contact us now
+            </button>
+          </div>
       </section>
     </main>
     <!-- Main Content End -->
